--- a/education.html
+++ b/education.html
@@ -54,7 +54,7 @@
                     <img src="images.png" width="80px" height="80px">
                     <div class="edu3">
                         <p id="year">2022 </p>
-                        <h4>Started Bsc.It</h4>
+                        <h4>Completed Bsc.It</h4>
                         <p> I Have Started My Collage In Harivandana Collage Rajkot 2022.</p>
                     </div>
                 </div>
