--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
             </div>
             <div class="form">
                 <form>
-                    <input type="text" class="box" id="name" placeholder="name" required>
-                    <input type="email" class="box" id="email" placeholder="email" required>
-                    <input type="text" class="box" id="sub" placeholder="subject" required>
-                    <textarea name="" id="msg" cols="30" rows="10" class="box message" placeholder="message"
+                    <input type="text" class="box" id="name" placeholder="Enter Your Name" required>
+                    <input type="email" class="box" id="email" placeholder="Enter Your Email" required>
+                    <input type="text" class="box" id="sub" placeholder="Enter Your subject" required>
+                    <textarea name="" id="msg" cols="30" rows="10" class="box message" placeholder="Enter Your Message"
                         required></textarea>
                     <button type="submit" onclick="gotowhatsapp()" class="btn"> send <i class="fas fa-paper-plane"></i></button>
                 </form>
