--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <h1>I'm <span class="multitext"></span></h1>
                 <p>I Know About Git & Github, HTML, CSS, TailwindCSS, JavaScript, JQuery, Bootstrap, PHP And MySql.
                 <div class="btns">
-                    <a href="Vatsal_Resume.pdf" download id="anime"> Download CV</a>
-                    <a id="anime1">Hire Me</a>
+                    <a id="anime1" href="contact.html">CONTACT</a>
                 </div>
                 </p>
             </div>
