--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
             <div class="info1">
                 <div class="info">
                     <h4>Name :<span> Vatsal Kansagara</span></h4>
-                    <h4>Age :<span> 20</span></h4>
-                    <h4> Qualification :<span> Bsc it</span></h4>
+                    <h4>DOB:<span> 12/08/2004</span></h4>
+                    <h4> Qualification :<span> BSC.IT</span></h4>
                     <h4>Post :<span> Full Stack Developer</span></h4>
                     <h4>Language :<span> English, Hindi, Gujarati</span></h4>
                 </div>
@@ -47,7 +47,7 @@
                     
                 </div>
             </div>
-            <p>I Am Bsc.it student of Harivandana collage rajkot. I Have Completed <span> 2+</span> Live Projects In Speed
+            <p>I Am BSC.IT student of Harivandana collage rajkot. I Have Completed <span> 2+</span> Live Projects In Speed
                 Computers. I am a <span>web designer</span>  and <span>web devloper</span> . I Know About Git & Github, HTML, CSS, TailwindCSS, JavaScript, JQuery, Bootstrap, PHP And MySql. Also I Have Some Knowledge About Laravel Framework.</p>
         </center>
     </div>
