--- a/prot.html
+++ b/prot.html
@@ -36,12 +36,12 @@
             <div class="box1">
                 <div class="box2">
                     <a href="https://myshadi.vercel.app/" target="_blank">
-                        <img src="Screenshot 2024-02-05 205101.png" alt="">
+                        <img src="Screenshot 2024-02-05 205101.png" >
                     </a>
                 </div>
                 <div class="box2">
                     <a href="https://owl-carousel.vercel.app/" target="_blank">
-                        <img src="Screenshot 2024-02-05 205445.png" alt="">
+                        <img src="Screenshot 2024-02-05 205445.png" >
                     </a>
                 </div>
             </div>
