--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="about">
-        <nav>
+         <nav>
             <div class="logo">vatsal</div>
             <ul class="navitems">
                 <li><a href="index.html">home</a></li>
@@ -29,18 +29,18 @@
                 <a href="https://x.com/vatsalpatel1208?t=7pkerfO-aTifht7cXhqsUA&s=08" target="_blank"><i
                         class="fa-brands fa-twitter"></i></a>
             </div>
-        </nav>
-        <center>
+        </nav> 
+        <center> 
             <h5>Contact Me</h5>
             <hr>
-        </center>
+       </center>
         <div class="row">
             <div class="contact">
                 <h3><i class="fas fa-envelope"></i> vatsalkansagara246@gmail.com </h3>
                 <h3><i class="fas fa-phone"></i> +91 95103 45505</h3>
                 <h3><i class="fas fa-map-marker-alt"></i> Rajkot Gujarat </h3>
 
-            </div>
+            </div><center>
             <div class="form">
                 <form>
                     <input type="text" class="box" id="name" placeholder="Enter Your Name" required>
@@ -51,7 +51,7 @@
                     <button type="submit" onclick="gotowhatsapp()" class="btn"> send <i class="fas fa-paper-plane"></i></button>
                 </form>
             </div>
-        </div>
+        </div> </center>
 
         
         <script>
