--- a/prot.html
+++ b/prot.html
@@ -26,8 +26,7 @@
                     target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/vatsal_kansagara12?utm_source=qr&igsh=OHZkams4M2p3aGpq"
                     target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://x.com/vatsalpatel1208?t=7pkerfO-aTifht7cXhqsUA&s=08" target="_blank"><i
-                        class="fa-brands fa-twitter"></i></a>
+                <a href="https://x.com/vatsalpatel1208?t=7pkerfO-aTifht7cXhqsUA&s=08" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
         </nav>
         <center>
